making the spin function, starting to chain animations together

--- a/css/presentation/style.css
+++ b/css/presentation/style.css
@@ -22,7 +22,7 @@
 
 html,
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Helvetica Neue", "Open Sans";
     margin: 0;
     padding: 0;
     width: 100%;
@@ -893,3 +893,100 @@ footer a:hover {
     width: 450px;
   }
 }
+
+/* this is all from test */
+
+
+		#container {
+			perspective: 50px;
+			-webkit-perspective: 50px;
+			-moz-perspective: 50px;
+			-ms-perspective: 50px;
+
+			transform-origin: 50% 100%;
+			-webkit-transform-origin: 50% 100%;
+			-moz-transform-origin: 50% 100%;
+			-ms-transform-origin: 50% 100%;
+
+			opacity: 0.55;
+		}
+
+		#welcome {
+			position: fixed;
+			width: 22rem;
+			left: 50%;
+			top: 45%;
+			margin-top: -1rem;
+			margin-left: -11rem;
+			
+			font-weight: 200;
+			color: #fff;
+			opacity: 0.65;
+			text-align: center;
+			font-size: 0.775rem;
+			line-height: 1.05rem;
+			letter-spacing: 0.135em;
+			word-spacing: -0.075rem;
+		}
+
+		@media screen and (max-width: 400px) {
+			#welcome {
+				font-size: 0.45rem !important;
+			}
+		}
+
+		#browserWidthNotice {
+			font-style: italic;
+			display: none;
+		}
+
+		#logo {
+			position: fixed;
+			right: 0.75rem;
+			bottom: 0.65rem;
+
+			cursor: pointer;
+
+			text-decoration: none;
+			color: #d6d6d6;
+			font-size: 2rem;
+			letter-spacing: 0.025em;
+		}
+
+		#logoDot {
+			color: #d74580;
+		}
+
+		.dot {
+			position: fixed;
+			width: 200px;
+			height: 80px;
+			text-align: center;
+			background-color: #4bc2f1;
+		}
+		.dotInfo {
+			font-size: 12px;
+			position: relative;
+			top: 15%;
+			transform: translateY(-15%); 
+		}
+		
+		.dotName {
+  			position: relative;
+			top: 15%;
+			transform: translateY(-15%); 
+		}
+		.overlay1 {
+		    /* Height & width depends on how you want to reveal the overlay (see JS below) */
+		    height: 100%;
+		    width: 0;
+		    position: fixed; /* Stay in place */
+		    z-index: 2; /* Sit on top */
+		    left: 0;
+		    top: 0;
+		    background-color: rgb(0,0,0); /* Black fallback color */
+		    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+		    overflow-x: hidden; /* Disable horizontal scroll */
+		    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+		}
+		
